--- a/package.json
+++ b/package.json
@@ -20,9 +20,23 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^10.0.0",
+    "@aws-sdk/client-sns": "^3.529.1",
+    "@nestjs/common": "^10.3.3",
+    "@nestjs/config": "^3.2.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@prisma/client": "^5.10.2",
+    "@types/jsonwebtoken": "^9.0.6",
+    "aws-sdk": "^2.1574.0",
+    "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "config": "^3.3.11",
+    "dotenv": "^16.4.5",
+    "jsonwebtoken": "^9.0.2",
+    "prisma": "^5.10.2",
+    "prisma-class-generator": "^0.2.9",
+    "prisma-client": "^0.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
@@ -30,6 +44,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
